--- a/Website/Content/Site.css
+++ b/Website/Content/Site.css
@@ -1247,6 +1247,10 @@ footer#footer div.license {
     font-size: .7em;
 }
 
+.footer-acknowledgements {
+    font-size: .7em
+}
+
 /* async upload */
 form .async-upload-panel
 {
