Add a 'Manage Favorite Packages' page, and start displaying user's favorite packages on the user profile page.

--- a/Website/Content/Site.css
+++ b/Website/Content/Site.css
@@ -784,6 +784,14 @@ fieldset.search label {
     padding: 0;
 }
 
+    /* Profile Page Favorites */
+
+#favoriteList {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
     /* List Package */
 
 section.package {
