--- a/Website/Views/Packages/ListPackages.cshtml
+++ b/Website/Views/Packages/ListPackages.cshtml
@@ -85,9 +85,11 @@
     @* NuGet Favorite Button *@
     <script>
         $(function() {
-            var input = {
-                ids: "@String.Join("|", Model.Items.Select(item => item.Id))"
-            };
+            showFavorites("@String.Join("|", Model.Items.Select(item => item.Id))");
+        });
+
+        function showFavorites(packageIds) {
+            var input = { ids: packageIds };
             $mvc.JsonApi.TestFavorites(input).success(function(result) {
                 if (result.success) {
                     $(".favoritebtn").show();
@@ -100,11 +102,11 @@
                     }
                 }
             });
-        });
+        }
 
         function favorite(packageId) {
             var input = { id: packageId };
-            $mvc.JsonApi.FavoritePackage(input).success(function () {
+            $mvc.JsonApi.FavoritePackage(input).success(function() {
                 $(document.getElementById("favorite-" + packageId)).hide();
                 $(document.getElementById("unfavorite-" + packageId)).show();
             });
@@ -112,7 +114,7 @@
 
         function unfavorite(packageId) {
             var input = { id: packageId };
-            $mvc.JsonApi.UnfavoritePackage(input).success(function () {
+            $mvc.JsonApi.UnfavoritePackage(input).success(function() {
                 $(document.getElementById("unfavorite-" + packageId)).hide();
                 $(document.getElementById("favorite-" + packageId)).show();
             });
