After debugging - fix various javascript bugs, edge cases, fxcop complaints, and code review feedback resulting from previous fixes.

--- a/Website/Views/Packages/DisplayPackage.cshtml
+++ b/Website/Views/Packages/DisplayPackage.cshtml
@@ -27,15 +27,7 @@
     <script> 
         $(function() {
             showFavorite("@Model.Id");
-        });
-
-        $(document).ready(function () {
-            $(document.getElementById("unfavorite-@Model.Id")).click(function() {
-                unfavorite("@Model.Id");
-            });
-            $(document.getElementById("favorite-@Model.Id")).click(function () {
-                favorite("@Model.Id");
-            });
+            bindFavoriteButtons();
         });
 
     </script>
