--- a/Website/Views/Users/MyFavorites.cshtml
+++ b/Website/Views/Users/MyFavorites.cshtml
@@ -32,6 +32,7 @@
     <script>
         $(function () {
             showFavorites("@String.Join("|", Model.Items.Select(item => item.Id))");
+            bindFavoriteButtons();
         });
     </script>
 }
